Improve formatting during WIP